--- a/TO DO LIST/my.html
+++ b/TO DO LIST/my.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<head>
+	<title>TO-DO-LIST</title>
+</head>
+<body>
+	<link rel="stylesheet" type="text/css" href="todo.css">
+	<div id= "titlebar">
+<center>TO-DO-LIST</center>
+</div>
+<div class="typearea">
+	<input id="userInput" type="text" placeholder="New item..." maxlength="27">
+	<button id="enter">ADD ITEM</button>
+	</div>
 
+		<div class="row">
+			<div class="listItems col-12">
+				<ul class="col-12 offset-0 col-sm-8 offset-sm-2">
+				</ul>
+			</div>
+		</div>
+
+	</div>
+		<script type="text/javascript" src="to.js"></script>
+	</body>
+</html>
